--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container">
             <div class="masthead-subheading">Hello, I&apos;m Methea</div>
             <div class="masthead-description">Computer Science Engineering student and Aspiring Web Developer.</div>
-            <a class="btn btn-primary btn-lg text-uppercase js-scroll-trigger" href="#project">Explore my work</a>
+            <a class="btn btn-primary btn-lg text-uppercase js-scroll-trigger " href="#project" >Explore my work</a>
         </div>
     </header>
     <!-- Skill-->
@@ -88,7 +88,7 @@
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
                             <div class="portfolio-hover">
-                                <div class="portfolio-hover-content "><i class="fas fa-plus fa-3x"></i></div>
+                                <div class="portfolio-hover-content " data-tooltip="View the demo"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/pic/camp.jpg" alt="campsite" />
                         </a>
@@ -102,7 +102,7 @@
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
                             <div class="portfolio-hover">
-                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                <div class="portfolio-hover-content" data-tooltip="View the demo"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/pic/form.png" alt="Survey form" />
                         </a>
@@ -116,7 +116,7 @@
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
                             <div class="portfolio-hover">
-                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                <div class="portfolio-hover-content" data-tooltip="View the demo"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/pic/personal_page.jpg" alt="" />
                         </a>
@@ -130,7 +130,7 @@
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
                             <div class="portfolio-hover">
-                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                <div class="portfolio-hover-content" data-tooltip="View the demo"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/pic/tribute.png" alt="" />
                         </a>
@@ -144,7 +144,7 @@
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
                             <div class="portfolio-hover">
-                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                <div class="portfolio-hover-content" data-tooltip="View the demo"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/pic/hobby.png" alt="hobby page" />
                         </a>
@@ -158,7 +158,7 @@
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
                             <div class="portfolio-hover">
-                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                <div class="portfolio-hover-content" data-tooltip="View the demo"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/pic/product.png" alt="soap shop" />
                         </a>
@@ -231,7 +231,7 @@
                     </div>
                 </li>
                 <li class="timeline-inverted">
-                    <div class="timeline-image pt-3">
+                    <div class="timeline-image pt-3" data-tooltip="Very exciting to see what next">
                         <h4>Continue My Journey! </h4>
                     </div>
                 </li>
