--- a/index.html
+++ b/index.html
@@ -246,13 +246,13 @@
                 <h3 class="section-subheading text-muted">My educational journey and achievements</h3>
             </div>
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-10">
                     <div class="acad-item">
                         <h3>Bachelor of Science in Computer Science Engineering</h3>
                         <h4>University of Debrecen | Expected Graduation: 2026</h4>
-                        <p class="text-muted">Full scholarship recipient maintaining good academic performance while building practical skills through projects.</p>
+                        <p class="text-muted">Full scholarship recipient maintaining good academic performance while building practical skills through projects.</p> 
                         <div class="row">
-                            <div class="col-md-8">
+                            <div class="col-md-4">
                                   <h5>Relevant Coursework:</h5>
                                 <ul class="text-left">
                                     <li>Web Development</li>
@@ -272,10 +272,34 @@
                                     <li><a href="https://drive.google.com/file/d/1fWlaDcKbkltkNWKt8udfIxj5Zezcwvo1/view?usp=sharing" target="_blank" rel="noopener noreferrer">Python</a></li>
                                 </ul>
                             </div>
-                        </div>                        
-                    </div>                     
+                            <div class="col-md-4 wrapper">
+                            <div class=" art">
+                                <div class="face">
+                                    <div class="hair"></div>
+                                    <div class="head">
+                                        <div class="ear left"></div>
+                                        <div class="ear right"></div>
+                                        <div class="brow left"></div>
+                                        <div class="brow right"></div>
+                                        <div class="eyes">
+                                            <div class="eye left">
+                                                <div class="iris"></div>
+                                            </div>
+                                            <div class="eye right">
+                                                <div class="iris"></div>
+                                            </div>
+                                        </div>
+                                        <div class="nose"></div>
+                                        <div class="mouth"></div>
+                                    </div>
+                                </div>
+                                <div class="hand"></div>
+                            </div>   
+                            </div>
+                        </div>
+                    </div>                   
                 </div>
-            </div>                      
+            </div>             
         </div>
     </section>
     <!-- Interest-->
